@@ -70,7 +70,7 @@
    <property name="operator">or</property>
    <property name="operator_visible">0</property>
    <property
-      name="vocabulary">Products.PloneMeeting.vocabularies.proposinggroupsvocabulary</property>
+      name="vocabulary">Products.PloneMeeting.vocabularies.proposinggroupsforfacetedfiltervocabulary</property>
    <property name="catalog"></property>
    <property name="maxitems"></property>
    <property name="sortreversed">0</property>
