@@ -308,7 +308,7 @@ class MeetingConfigDescriptor(Descriptor):
                          'availableItemsListVisibleColumns', 'itemsListVisibleColumns', 'itemsListVisibleFields',
                          'itemColumns', 'meetingColumns',
                          'dashboardItemsListingsFilters', 'dashboardMeetingAvailableItemsFilters',
-                         'dashboardMeetingLinkedItemsFilters',
+                         'dashboardMeetingLinkedItemsFilters', 'groupsShownInDashboardFilter',
                          'workflowAdaptations', 'transitionsToConfirm', 'transitionsForPresentingAnItem',
                          'onTransitionFieldTransforms', 'onMeetingTransitionItemTransitionToTrigger',
                          'meetingPresentItemWhenNoCurrentMeetingStates',
@@ -528,6 +528,7 @@ class MeetingConfigDescriptor(Descriptor):
                                               'c11', 'c12', 'c13', 'c14', 'c15', 'c16')
         self.dashboardMeetingAvailableItemsFilters = ('c4', 'c11', 'c16')
         self.dashboardMeetingLinkedItemsFilters = ('c4', 'c6', 'c7', 'c11', 'c12', 'c16', 'c19')
+        self.groupsShownInDashboardFilter = []
         # default batching value, this must be a multiple of "20"
         self.maxShownListings = "20"
         self.maxShownAvailableItems = "20"
