@@ -726,7 +726,7 @@ dt.highlightValue span {
 }
 
 /* CKeditor style */
-.highlight-orange {color: orange;}
+.highlight-orange {background-color: orange;}
 .highlight-red {color: red;}
 .highlight-yellow {background-color: yellow;}
 p.indent-firstline {text-indent: 40px;}
