@@ -9,6 +9,8 @@
            name="Products.PloneMeeting.vocabularies.categoriesvocabulary" />
   <utility component=".vocabularies.ItemProposingGroupsVocabularyFactory"
            name="Products.PloneMeeting.vocabularies.proposinggroupsvocabulary" />
+  <utility component=".vocabularies.ItemProposingGroupsForFacetedFilterVocabularyFactory"
+           name="Products.PloneMeeting.vocabularies.proposinggroupsforfacetedfiltervocabulary" />
   <utility component=".vocabularies.ItemProposingGroupAcronymsVocabularyFactory"
            name="Products.PloneMeeting.vocabularies.proposinggroupacronymsvocabulary" />
   <utility component=".vocabularies.GroupsInChargeVocabularyFactory"
