@@ -395,6 +395,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Added field MeetingConfig.availableItemsListVisibleColumns in addition to MeetingConfig.itemsListVisibleColumns
   to be able to define columns to display in the table of available items.  MeetingConfig.itemsListVisibleColumns
   is now used to define columns to display in the table of items presented to a meeting
+- Added field MeetingConfig.groupsShownInDashboardFilter to be able to select values that will be displayed in the 'Group' filter
+  of the faceted dashboards
 
 3.3 (2015-02-27)
 ----------------
